--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -36,7 +36,7 @@
   }
 
   .link-list {
-    //border-top: 1px solid $grey700;
+    border-top: 1px solid $grey700;
     flex: 1;
     margin-right: $keyline*4;
 
