--- a/app/styles/_app.scss
+++ b/app/styles/_app.scss
@@ -28,8 +28,7 @@ html{
 }
 
 body {
-  //background: $backgroundColor;
-  background: #171b20;
+  background: $backgroundColor;
   background-image: url(https://university.dynatrace.com/images/dtu_content_background.svg);
   background-position: top;
   background-size: cover;
@@ -85,11 +84,13 @@ ul, li {
 }
 
 #banner {
-  background-color: #171b20;
+  //background-image: url(https://university.dynatrace.com/images/dtu_content_background.svg);
   color: #fff;
+  background-color: #273039;
   @include keyline-40();
   padding: 30px 0 20px 0;
-  border-bottom: 3px solid #23282d;
+  //border-bottom: 3px solid #23282d;
+  box-shadow: 0px 1px 4px -1px $blueGrey500;
 
   &[down] {
     .banner-slider {
@@ -116,6 +117,7 @@ ul, li {
     max-width: 100%;
     width: 100%;
     background-color: $backgroundColor;
+    background-image: url(https://university.dynatrace.com/images/dtu_content_background.svg);
     color: $blueGrey600;
     padding: $keyline 0;
     transform: translateY(-100%);
@@ -185,19 +187,17 @@ padding:1px;
 
 .paper-button-0,
 .paper-menu-button-0 {
-  border-radius: $radius;
+  border-radius: $radius!important;
 }
 
 .dropdown-filter {
-  background:none;
+  background-color: #fff;
+  border-radius: $radius;
 }
 
 .dropdown-content {
-  background-color: #23282d;
-  color: #fff;
-  border: 0.1px solid transparent;
-  border-color: #23282d;
-  box-sizing: border-box;
+  border-radius: $radius !important;
+  text-transform: capitalize;
 
   paper-item:hover {
     background: #2c3035;
