--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -34,7 +34,8 @@ $grey500: #9e9e9e;
 $grey700: #616161;
 $grey800: #424242;
 
-$backgroundColor: #ECEFF1;
+//$backgroundColor: #ECEFF1;
+$backgroundColor: black;
 $mainColor: $cyan;
 $accentColor: #0097A7;
 
